# alejandrogomezfrieiro.github.io

./: .gitignore  flake.nix  justfile  package-lock.json  pyproject.toml  quartz.config.ts  quartz.layout.ts  script.py
.devenv/: profile  run
.github/: FUNDING.yml
content/: aboutme.md  crosspost.md  digital garden.md  index.md  now.md  python_cicd.md
content/.trash/: blog.md
content/blog/: blog.md  blog_on_tablet.md  codecompanion.md  eternal recurrence.md  reproducible_python_development_environment.md  running_ollama_in_nixos.md  setting_up_bevy.md  test.md
content/media/books/: The Vegetarian.md
content/media/science/: Spin Environment of a Superconducting Qubit in High Magnetic Fields.md  Untitled.md
content/projects/: projects.md
content/projects/digital garden/: crosspost.md  setup.md
content/projects/nixification/: nixification.md  nixvim.md  python devenv.md  python project.md  templates.md
content/projects/quantum garden/: crosspost.md  dataview rendering.md  digital garden.md  quantum garden.md  second brain.md  setup.md
content/topics/: neovim.md
content/topics/neural/: neural_and_probabilistic_differential_equations.md
content/topics/nix/: Nix.md  cachix.md  flake-parts.md  nix-flakes.md  reproducibility.md
content/topics/reproducibility/: reproducibility.md
content/topics/rust/: rust.md
quartz/: __init__.py
quartz/components/: Comments.tsx
