[project]
name = "quartz"
version = "0.1.0"
description = "Manage digital garden"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.31.0",
    "marko>=2.1.2",
    "pydantic>=2.10.4",
    "pydevto>=0.1.5",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
]

# [project.scripts]
# hello = "hello_world:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]

[tool.uv.pip]
index-url = "https://test.pypi.org/simple"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

# [tool.hatch.build.targets.wheel]
# packages = ["python/src"]
